# alta_lineup_summary

./: .env.example  .gitignore  README.md
python/: .env.example  .gitignore  README.md  pyproject.toml
python/scripts/: inspect_t2_ratings.py  inspect_t2_search.py  inspect_ultimate_ratings.py  inspect_usta_search.py
python/src/alta_tool/: aggregate.py  config.py  main.py  matching.py  models.py  rating_normalize.py  sheets.py
python/src/alta_tool/io/: __init__.py  base.py  factory.py  google.py  local_excel.py
python/src/alta_tool/sources/: __init__.py  t2.py  ultimate.py
python/tests/: test_aggregate.py  test_config.py  test_io_factory.py  test_local_excel.py  test_main_auth.py  test_rating_normalize.py  test_sheets.py  test_t2_rating_extraction.py  test_ultimate_rating_extraction.py
scripts/: inspect_ultimate_search.py  inspect_usta_search.py
src/alta_tool/: aggregate.py  config.py  main.py  models.py  rating_normalize.py  sheets.py
src/alta_tool/sources/: base.py  t2.py  ultimate.py  usta.py
tests/: test_aggregate.py  test_config.py  test_matching.py  test_rating_normalize.py  test_sheets.py  test_usta_parsing.py
