[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alta-ratings"
version = "0.1.0"
description = "Georgia ALTA player rating aggregator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "gspread>=6.0.0",
  "openpyxl>=3.1.0",
  "pytest>=9.0.2",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "tenacity>=8.2.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
alta-ratings = "alta_tool.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
